Fix category blue on iPhone

--- a/web/postcss/mixins/clickable.pcss
+++ b/web/postcss/mixins/clickable.pcss
@@ -3,6 +3,8 @@
   cursor: pointer;
   user-select: none;
   border: none;
+  color: var(--text-color);
+  background: transparent;
 
   &[aria-disabled='true'] {
     pointer-events: none;
